add ext message interface, change to post request
