# src/main/resources/config/openapi.json
@@ -342,6 +342,26 @@
         },
         "/deletemessage": {
         	"delete":{}
+        },
+        "/extmessageremove":{
+        	"post":{}
+        },"/extmessageappend":{
+        	"post":{
+					"requestBody": {
+                    	"description": "Pet to add to the store",
+                   	 	"required": true,
+                    	"content": {
+                        	"application/json": {
+                            	"schema": {
+                                }
+                            }
+                        }
+                    }
+		     }
+        },"/extmessageupdate":{
+        	"post":{}
+        },"/extmessageupdateone":{
+        	"post":{}
         }
         
     },
